--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    안녕하세요
+    <div id="wrap">
+        <div id="head"></div>
+        <div id="container"></div>
+        <div id="footer"></div>
+    </div>
 </body>
 
 </html>
