text-align, flex勉強

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
 <body>
     <div id="wrap">
-        <div id="head"></div>
-        <div id="container"></div>
-        <div id="footer"></div>
+        <div id="wrap-center">
+            <div id="head"></div>
+            <div id="container"></div>
+            <div id="footer"></div>
+        </div>
     </div>
 </body>
 
