--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./naver-favicon.ico" type="image/x-icon">
     <title>Document</title>
+    <style>
+        #wrap {
+            text-align: center;
+        }
+
+        #wrap-center {
+            display: inline-block;
+            width: 1280px;
+            background-color: yellow;
+        }
+
+        #head {
+            height: 600px;
+
+        }
+    </style>
 </head>
 
 <body>
