ハンバーガーメニュー

--- a/index.html
+++ b/index.html
@@ -17,9 +17,16 @@
             background-color: yellow;
         }
 
-        #head {
-            height: 600px;
+        #header {
+            height: 215px;
+        }
 
+        #header-hamburger {
+            position: absolute;
+            background-color: blue;
+            width: 32px;
+            height: 32px;
+            padding: 8px;
         }
     </style>
 </head>
@@ -27,7 +34,11 @@
 <body>
     <div id="wrap">
         <div id="wrap-center">
-            <div id="head"></div>
+            <div id="header">
+                <div id="header-hamburger">
+
+                </div>
+            </div>
             <div id="container"></div>
             <div id="footer"></div>
         </div>
