1. 重要なのは前に★をつける 2. paddingはタグとコンテンツの余白だ。

--- a/index.html
+++ b/index.html
@@ -14,18 +14,25 @@
         #wrap-center {
             display: inline-block;
             width: 1280px;
-            background-color: yellow;
+            background-color: rgb(255, 255, 84);
         }
 
         #header {
             height: 215px;
         }
 
-        #header-hamburger {
+        /* #header-hamburger {
+            padding: 8px;
+        } */
+
+        #header-hamburger>div {
             position: absolute;
-            background-color: blue;
-            width: 32px;
-            height: 32px;
+            background-size: 463px 440px;
+            background-position: -311px -166px;
+            background-image: url(./sp_main.85969987\ \(2\).png);
+            background-repeat: no-repeat;
+            width: 26px;
+            height: 26px;
             padding: 8px;
         }
     </style>
@@ -36,7 +43,8 @@
         <div id="wrap-center">
             <div id="header">
                 <div id="header-hamburger">
-
+                    <div>
+                    </div>
                 </div>
             </div>
             <div id="container"></div>
