--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             height: 215px;
         }
 
-        /* #header-hamburger {
+        #header-hamburger {
             padding: 8px;
-        } */
+        }
 
         #header-hamburger>div {
             position: absolute;
@@ -33,7 +33,6 @@
             background-repeat: no-repeat;
             width: 26px;
             height: 26px;
-            padding: 8px;
         }
     </style>
 </head>
