14. background-sizeとbackground-positionの関係は？ 15. header-hamburgerがなくなった理由は？

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="icon" href="./naver-favicon.ico" type="image/x-icon">
     <title>Document</title>
     <style>
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
         #wrap {
             text-align: center;
         }
@@ -19,18 +25,22 @@
 
         #header {
             height: 215px;
+            text-align: left;
         }
 
         #header-hamburger {
-            padding: 8px;
+            padding: 10 px;
+            background: none;
+            display: inline-block;
+            border: none;
+            cursor: pointer;
         }
 
         #header-hamburger>div {
             position: absolute;
-            background-size: 463px 440px;
-            background-position: -311px -166px;
+            background-size: 926px 880px;
+            background-position: 400px 200px;
             background-image: url(./sp_main.85969987\ \(2\).png);
-            background-repeat: no-repeat;
             width: 26px;
             height: 26px;
         }
