position : static, relative, absolute, sticky, fixed

--- a/index.html
+++ b/index.html
@@ -92,14 +92,19 @@
         #header {
             height: 215px;
             text-align: left;
+            position: relative;
         }
 
         #header-hamburger {
+            position: absolute;
+            top: 18px;
+            left: 10px;
             padding: 8px;
             background: none;
             display: inline-block;
             border: none;
             cursor: pointer;
+
         }
 
         #header-hamburger:hover {
